# piper-mate

./: README.md
Lerobot/: README.md  piper-star.md  piper-star_en.md
Lerobot/lerobot_robot_piper/: setup.py
Lerobot/lerobot_robot_piper/lerobot_robot_piper/: piper.py
Lerobot/lerobot_teleoperator_firefly/: README.md  setup.py
Lerobot/lerobot_teleoperator_firefly/lerobot_teleoperator_firefly/: __init__.py  config_starai_firefly.py
Lerobot/lerobot_teleoperator_pipermate/: setup.py
Lerobot/lerobot_teleoperator_pipermate/lerobot_teleoperator_pipermate/: __init__.py  config_starai_pipermate.py  starai_pipermate.py
Python_SDK/: README.md  fashionstar_agilex.py  piper_pipermate.py
ROS2_HUMBLE/: .gitignore  README.md  REMADE.md
ROS2_HUMBLE/src/piper/: package.xml  setup.py
ROS2_HUMBLE/src/piper_mate/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/piper_mate/piper_mate/: piper_mate.py
ROS2_HUMBLE/src/piper_msgs/: CMakeLists.txt  package.xml
ROS2_HUMBLE/src/piper_msgs/msg/: PiperStatusMsg.msg
ROS2_HUMBLE/src/piper_msgs/srv/: Enable.srv
ROS2_HUMBLE/src/robo_driver/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/robo_driver/robo_driver/: robo_driver.py
ROS2_HUMBLE/src/star_piper/: package.xml  setup.cfg  setup.py
ROS2_HUMBLE/src/star_piper/star_piper/: star_piper.py
lerobot_teleoperator_firefly/: starai_firefly.py
